add_library(metadata INTERFACE)

if(NOT DEFINED ENV{TARGET} OR "$ENV{TARGET}" STREQUAL "")
    message(FATAL_ERROR "Metadata requires TARGET to be exported by the makefile")
endif()

set(_opendeck_target "$ENV{TARGET}")

execute_process(
    COMMAND sh "-c" "git describe --tags --abbrev=0 | cut -c 2- | cut -d. -f1"
    WORKING_DIRECTORY $ENV{ZEPHYR_PROJECT}/app
    OUTPUT_VARIABLE OPENDECK_SW_VERSION_MAJOR
    OUTPUT_STRIP_TRAILING_WHITESPACE
)

execute_process(
    COMMAND sh "-c" "git describe --tags --abbrev=0 | cut -c 2- | cut -d. -f2"
    WORKING_DIRECTORY $ENV{ZEPHYR_PROJECT}/app
    OUTPUT_VARIABLE OPENDECK_SW_VERSION_MINOR
    OUTPUT_STRIP_TRAILING_WHITESPACE
)

execute_process(
    COMMAND sh "-c" "git describe --tags --abbrev=0 | cut -c 2- | cut -d. -f3"
    WORKING_DIRECTORY $ENV{ZEPHYR_PROJECT}/app
    OUTPUT_VARIABLE OPENDECK_SW_VERSION_REVISION
    OUTPUT_STRIP_TRAILING_WHITESPACE
)

execute_process(
    COMMAND $ENV{ZEPHYR_PROJECT}/scripts/gen/gen_fw_uid.sh ${_opendeck_target}
    WORKING_DIRECTORY $ENV{ZEPHYR_PROJECT}/app
    OUTPUT_VARIABLE OPENDECK_TARGET_UID
    OUTPUT_STRIP_TRAILING_WHITESPACE
)

set(OPENDECK_TARGET_UID             ${OPENDECK_TARGET_UID} CACHE INTERNAL "OpenDeck target UID")
set(OPENDECK_SW_VERSION_MAJOR       ${OPENDECK_SW_VERSION_MAJOR} CACHE INTERNAL "OpenDeck software version major")
set(OPENDECK_SW_VERSION_MINOR       ${OPENDECK_SW_VERSION_MINOR} CACHE INTERNAL "OpenDeck software version minor")
set(OPENDECK_SW_VERSION_REVISION    ${OPENDECK_SW_VERSION_REVISION} CACHE INTERNAL "OpenDeck software version revision")
set(OPENDECK_DFU_BEGIN_MAGIC        0x5546444F CACHE INTERNAL "OpenDeck DFU begin magic")
set(OPENDECK_DFU_END_MAGIC          0x4546444F CACHE INTERNAL "OpenDeck DFU end magic")
set(OPENDECK_DFU_FORMAT_VERSION     1 CACHE INTERNAL "OpenDeck DFU format version")

target_compile_definitions(metadata
    INTERFACE
    OPENDECK_TARGET="${_opendeck_target}"
    OPENDECK_TARGET_UID=${OPENDECK_TARGET_UID}
    OPENDECK_SW_VERSION_MAJOR=${OPENDECK_SW_VERSION_MAJOR}
    OPENDECK_SW_VERSION_MINOR=${OPENDECK_SW_VERSION_MINOR}
    OPENDECK_SW_VERSION_REVISION=${OPENDECK_SW_VERSION_REVISION}
    OPENDECK_DFU_BEGIN_MAGIC=${OPENDECK_DFU_BEGIN_MAGIC}
    OPENDECK_DFU_END_MAGIC=${OPENDECK_DFU_END_MAGIC}
    OPENDECK_DFU_FORMAT_VERSION=${OPENDECK_DFU_FORMAT_VERSION}
)
